--- a/registros.html
+++ b/registros.html
@@ -66,21 +66,21 @@
                         <br/>
 
                         <h3 class="center lineaDeTexto">Chemoarish:</h3>
-                        <p>Fue el spren de la erosión y fin, una especie de RUINA, pero de Roshar.</p>
-                        <P>Antes disponía de poder metafórico, ahora lo que posee es una variante de la potencia <b>progresión</b> pero al revés, de aluna forma cuando entra en contacto contigo congela los daños de tu cuerpo, una herida no se curara al menos que se utilicen cantidades absurdas de investidura, el dolor remitirá, y los huesos no se curara.</P>
-                        <p>Su patrón de movimiento es realmente extraño hay informes de que ha caminado hasta el Origen, allí donde no hay nada que pueda lastimar… o ¿sí?</p>
+                        <p>Fue el spren de la erosión y el fin, una especie de RUINA, pero de Roshar.</p>
+                        <P>Antes disponía de poder metafórico, ahora posee una variante de la potencia <b>progresión</b> pero al revés, de alguna forma cuando entra en contacto contigo congela los daños de tu cuerpo, una herida ya no se cura curara al menos que se utilicen cantidades absurdas de investidura, el dolor remitirá, pero los huesos no se curaran.</P>
+                        <p>Su patrón de movimiento es realmente extraño. Hay informes de que ha caminado hasta el Origen, allí donde no hay nada que pueda lastimar… o ¿sí?</p>
                         <p>Se sabe que no tiene conciencia, pero tal vez la evolución de Odium le diera pensamiento accidentalmente y se niegue a servirle.</p>
                         <br/>
 
                         
                         <h3 class="center lineaDeTexto">Dai-Gonarthis:</h3>
-                        <p>Este deshecho antes fue la sprenificacion de la muerte, se encarga de guiar a los muertos de que tuvieran tiempo conocer el proceso de morir, que estuvieran cómodos incluso podía otorgar una pequeña parte de investidura para comprender que sucedía y el pasaje al más allá fuera cómodo, algunos dicen que los vivos podían recibir los mensajes de los muertos.</p>
+                        <p>Este deshecho antes fue la sprenificacion de la muerte, se encarga de guiar a los muertos. De que tuvieran tiempo conocer el proceso de morir, que estuvieran cómodos. Incluso podía otorgar una pequeña parte de investidura para comprender que sucedía y el pasaje al más allá fuera cómodo, algunos dicen que los vivos podían recibir los mensajes de los muertos.</p>
                         <p>Este ser tan amable, fue roto por Cultivación y Odium cuando crearon el pacto de Braize, no podían permitir que todas las almas fueran al más allá, tuvieron que modificarlo, pero Odium le lastimo profundamente con el tiempo. El ciclo de revivir Fusionados termino destruyéndole. Ahora no es más que una criatura que toma la investidura de los muertos y los despacha rápidamente a su lugar sea el plano espiritual o a Braize.</p>
                         <br/>
 
                         <h3 class="center lineaDeTexto">Moelach:</h3>
                         <p>Fue la biblioteca de Roshar, tenía recuerdos del pasado.</p>
-                        <p>Antes de la corrupción de Odium, el spren guardaba momentos en su interior, cuando las personas necesitaban respuestas acudían al spren para encontrar respuestas en los recuerdos de grandes pensadores del Roshar.</p>
+                        <p>Antes de la corrupción de Odium, el spren guardaba momentos en su interior, cuando las personas necesitaban respuestas acudían al spren para enconrar respuestas en los recuerdos de grandes pensadores del Roshar.</p>
                         <p>Este spren era muy visitado por reyes y lideres, pero las personas de a pie podía pedir su ayuda y encontrar respuestas.</p>
                         <p>Odium le corrompió para dejarlo inútil y así debilitar los gobiernos de los oyentes, comenzó a dar visiones del futuro terrible, el mismo spren comenzó a de si nueva maldición y se ocultó en las profundidades, ahora su presencia solo es sentida en los últimos instantes de muerte</p>
                         <br/>
