--- a/HallOfFame.html
+++ b/HallOfFame.html
@@ -7,6 +7,9 @@
     <title>Registro de la fama</title>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/HallOfFame.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="profiles-container" class="profiles-container"></div>
